- update video (try to fix autoplay issue on mobile)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,6 +26,18 @@ html, body, h1, h2, h3, h4, p {
   padding: 0;
 }
 
+h1, h2, h3, h4 {
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 126%;
+}
+
+h2 {
+  font-size: 32px;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -38,16 +50,6 @@ a:hover {
 
 p { font-size: 18px; }
 
-h1, h2, h3, h4 {
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-size: 32px;
-  margin-bottom: 40px;
-  text-transform: uppercase;
-}
 
 .subtitle {
   font-size: 15px;
